# libtike-cufft

./: .gitignore  .loglogin  CMakeLists.txt  README.md  ampinit.tiff  anginit.tiff  convert_png.py  probeimag128.tiff  probereal128.tiff  recon_all.py  run.sh  setup.py  test.py  unwrap_manual.py
MURAs/: 017.tiff  029.tiff  037.tiff  041.tiff  053.tiff  061.tiff  073.tiff  089.tiff  097.tiff  101.tiff  109.tiff  113.tiff  137.tiff  149.tiff  157.tiff  173.tiff  181.tiff  193.tiff  197.tiff  229.tiff  233.tiff  241.tiff
src/: CMakeLists.txt
src/cuda/: CMakeLists.txt  kernels.cu  kernels.cuh  ptychofft.cu  ptychofft.i  shifts.cu
src/cuda/pybind11/: CMakeLists.txt  ptychofft.cxx
src/cuda/swig/: CMakeLists.txt  ptychofft.i
src/include/: kernels.cuh  ptychofft.cuh
src/libtike/cufft/: __init__.py  ptycho.py
src/ptychocg/: __init__.py  objects.py  ptychofft.i  ptychofft.py  ptychofft_wrap.cpp  solver.py
src/ptychotomo/: objects.py  solver.py
test/: Cryptomeria_japonica-1024.tif  Erdhummel_Bombus_terrestris-1024.tif  coords217.npy  initpsiamp.tiff  initpsiang.tiff  prb217_amp.tiff  test.py
tests/: test.py  test_adjoint.py  test_fsc.py  test_modes.py
tests/catalyst/: readh5.py  sorting.py  test_chip.py  test_rec_script.py
tests/model/: prbang.tiff
tests/rec/: prb0ampgaussian128.tiff  prb0anglegaussian128.tiff  prbampgaussian128.tiff  prbanglegaussian128.tiff  psianggaussian128.tiff
tmp/: data.tiff
